--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "test",
   "main": "init.js",
   "scripts": {
-    "test": "nodemon --exec babel-node src/init.js"
+    "test": "nodemon --exec babel-node src/init.js",
+    "assets": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,12 +28,14 @@
     "multer": "^1.4.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.12",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "webpack": "^5.58.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/node": "^7.15.4",
     "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.2.2",
     "web-pack": "^1.0.0",
     "webpack-cli": "^4.9.0"
   }
