--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "@babel/node": "^7.15.4",
     "@babel/preset-env": "^7.15.6",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
     "web-pack": "^1.0.0",
     "webpack-cli": "^4.9.0"
   }
