--- a/package.json
+++ b/package.json
@@ -18,19 +18,20 @@
   },
   "homepage": "https://github.com/gitbeginer/wetube#readme",
   "dependencies": {
+    "@ffmpeg/core": "^0.10.0",
     "@ffmpeg/ffmpeg": "^0.10.1",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "image-to-base64": "^2.2.0",
     "mongoose": "^6.0.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.12",
     "pug": "^3.0.2",
-    "regenerator-runtime": "^0.13.9",
     "webpack": "^5.58.0"
   },
   "devDependencies": {
