--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect-mongo": "^4.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.2",
     "image-to-base64": "^2.2.0",
     "mongoose": "^6.0.7",
