--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.12",
     "pug": "^3.0.2",
+    "regenerator-runtime": "^0.13.9",
     "webpack": "^5.58.0"
   },
   "devDependencies": {
