--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "test",
   "main": "init.js",
   "scripts": {
-    "test": "nodemon",
-    "assets": "webpack"
+    "start": "node build/init.js",
+    "build": "npm run build:server && npm run build:assets",
+    "build:server": "babel src -d build --ignore src/client",
+    "build:assets": "webpack --mode=production",
+    "dev:server": "nodemon",
+    "dev:assets": "webpack --mode=development -w"
   },
   "repository": {
     "type": "git",
@@ -37,7 +41,8 @@
     "webpack": "^5.58.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
     "@babel/node": "^7.15.4",
     "@babel/preset-env": "^7.15.6",
     "babel-loader": "^8.2.2",
